chore: add markdown and bib to awesome_bot, fix links
Closes #33

--- a/references.bib
+++ b/references.bib
@@ -124,7 +124,7 @@
   journal   = {CoRR},
   volume    = {abs/1507.01715},
   year      = {2015},
-  url       = {http://arxiv.org/abs/1507.01715},
+  url       = {https://arxiv.org/abs/1507.01715},
   note      = {Last accessed May~1, 2018},
   doi       = {10.5334/jors.85},
   archivePrefix = {arXiv},
@@ -214,7 +214,7 @@
   title={OLAC Protocol for Metadata Harvesting},
   author={Simons, G and Bird, S},
   journal={Open Language Archives Community},
-  url={http://www.languagearchives.org/OLAC/protocol.html},
+  url={http://olac.ldc.upenn.edu/OLAC/protocol.html},
   note={Last accessed May~1, 2018},
   year={2001}
 }
@@ -242,7 +242,7 @@ publisher={Blackwell}
   year={2009},
   address={London},
   publisher={SOAS, Endangered Languages Archive},
-  url={http://elar.soas.ac.uk/deposit/0056},
+  url={https://elar.soas.ac.uk/deposit/0056},
   note={\last{April~26}}
 }
 
@@ -422,7 +422,7 @@ publisher={Blackwell}
 @misc{fitzjohn2014reproducible,
   title={Reproducible research is still a challenge},
   author={FitzJohn, Rich and Pennell, Matt and Zanne, Amy and Cornwell, Will},
-  url={http://ropensci.org/blog/2014/06/09/reproducibility},
+  url={https://ropensci.org/blog/2014/06/09/reproducibility/},
   note={Last accessed May~1, 2018},
   year={2014}
 }
@@ -435,7 +435,7 @@ publisher={Blackwell}
                   Data Citation and Attribution in Linguistics Group}
                   and {the Linguistics Data Interest Group}},
   year =  2017,
-  url  =   {http://site.uit.no/linguisticsdatacitation/austinprinciples},
+  url  =   {http://site.uit.no/linguisticsdatacitation/austinprinciples/},
   note = {Draft, Version 0.1. Last accessed May~1, 2018}
 }
 
@@ -706,7 +706,7 @@ publisher={Blackwell}
   pages={27--32},
   series={NEALT Proceedings Series},
   year={2009},
-  url={http://hdl.handle.net/10062/9670},
+  url={https://dspace.ut.ee/handle/10062/9670},
   note={Last accessed May~1, 2018},
 }
 
@@ -1697,7 +1697,7 @@ title = {Directory International cooperation programs for the protection and pro
  location = {Edinburgh, Scotland},
  pages = {501--511},
  numpages = {11},
- url = {http://dl.acm.org/citation.cfm?id=2132960.2133030},
+ url = {https://dl.acm.org/citation.cfm?id=2132960.2133030},
  note      = {Last accessed May~1, 2018},
  acmid = {2133030},
  publisher = {Association for Computational Linguistics},
@@ -1841,7 +1841,7 @@ isbn = {978-1-4503-2865-4},
 location = {Hyderabad, India},
 pages = {100--116},
 numpages = {17},
-url = {http://doi.acm.org/10.1145/2593882.2593887},
+url = {https://doi.acm.org/10.1145/2593882.2593887},
 note={Last accessed May~1, 2018},
 doi = {10.1145/2593882.2593887},
 acmid = {2593887},
@@ -1893,7 +1893,7 @@ keywords = {Collaboration, Social Media, Software Engineering},
  author="{Naskapi Development Corporation}",
  year={2007},
  isbn={978-0-88843-557-8},
- url={http://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
+ url={https://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
  note={Last accessed May~1, 2018},
  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
