--- a/introduction.tex
+++ b/introduction.tex
@@ -19,7 +19,7 @@ In this thesis, I will examine methodology that can be used by linguists, resear
 
 In the field of computational linguistics, however, there are a deficit of resources which are licensed and available as open source. This largely stems from the need to financially recoup expenses for development, on licenses mandated by research groups or military funders, and on a lack of awareness of how open source code works by developers. Another consideration is that an open source label does not ensure that the code is worth using, maintained, relevant, or in scope for a given domain.
 
-Below, I will go into further depth about the state of low resource languages (LRL) and computational resources in Section~\ref{sec:endlang}, and what different languages need in order to have digital presence in Section~\ref{sec:resources}. In Section~\ref{sec:open-source}, I will define what open source is, and talk about issues relevant to open source code for LRLs. I will then in Section~\ref{sec:endlangcode} talk about the state of the open source ecosystem for LRLs online, in particular focusing on a database of open source code that I have built with the help of researchers around the world.
+Below, I will go into further depth about the state of low resource languages (LRL) and computational resources in Section~\ref{sec:endlang}, and what different languages need in order to have digital presence in Section~\ref{sec:resources}. In Section~\ref{sec:open-source}, I will define what open source is, and talk about issues relevant to open source code for LRLs. I will then in Section~\ref{sec:lrl-code} talk about the state of the open source ecosystem for LRLs online, in particular focusing on a database of open source code that I have built with the help of researchers around the world.
 
 I will touch on some specific examples of languages which could benefit from open source code in Section~\ref{sec:case-studies}, focusing on Gaelic, a language with tens of thousands of speakers but little online resources, and Naskapi, a language with only a thousand speakers. The Naskapi case study will be informed by original research, as I engaged in field research at the town where most Naskapi live and talked to linguists working on literacy efforts for this language. In Section~\ref{sec:methods}, I will discuss how open source can help low resource languages, and in Section~\ref{sec:discussion} I will expound further at a high level on what open source enables for linguists and language communities. Finally, in Section~\ref{sec:future-work} and Section~\ref{sec:conclusion} I will discuss future work, and offer some concluding remarks.
 
