--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -2,7 +2,7 @@
 \section{Low Resource Languages}
 \label{sec:endlang}
 
-In this section, I will outline the state of low resource languages. First I will define contrasting and distinct terms which are often used to describe these languages. Then, I will talk about language demographics and metrics used to categorise languages as having low resources, before moving on to discuss digital presence as a term for understanding language vitality. Finally, I will mention the various different groups who work on and fund low resource development, and consider how they impact a language's development.
+In this section, I will outline the state of low resource languages (LRLs). First I will define contrasting and distinct terms which are often used to describe these languages. Then, I will talk about language demographics and metrics used to categorise languages as having low resources, before moving on to discuss digital presence as a term for understanding language vitality. Finally, I will mention the various different groups who work on and fund low resource development, and consider how they impact a language's development.
 
 % Note: I removed linguistic diversity as a central concern
 
@@ -61,7 +61,7 @@ Some minority languages have legal status as minority languages. A good example 
 
 \textit{Low resource} languages are languages which have fewer computational resources than any of the larger languages that dominate global discourse. There is no distinct cut-off for defining a low resource language versus a \textit{high resource}, \textit{resource-rich}, or just a \textit{resourced} language. A \textit{low resource} language can also be indiscriminately called a \textit{under resourced} or \textit{sparsely resourced} language, and occasionally can also be called a {\it non-central} language \citep{streiter2006implementing}. The disparity in resolved definitions reflects the focus of research, as generally researchers work with specific languages on computational models, and not on large databases where a precise definition is useful. Qualifiers are often included - for instance, \citet{agic2015if}'s paper, "If all you have is a bit of the Bible: Learning POS taggers for {\it truly} low-resource languages" (emphasis added). These qualifiers are generally not considered within a rigorous system of rank - for more on that, consider Section~\ref{subsec:metrics} on metrics below.
 
-In the context of low resource languages, the majority of established work revolves around adapting existing systems from high resourced languages to low resource languages. In such a case, the \textit{source} language is where the original system was originally trained or upon which it was built, while the \textit{target} language is the language upon which the system is being used, tested, or adapted. These terms are largely context dependent. Similarly, \textit{sparse} in particular is more often used to refer to a dataset, but can be used of a language when it is under resourced.
+In the context of LRLs, the majority of established work revolves around adapting existing systems from high resourced languages to low resource languages. In such a case, the \textit{source} language is where the original system was originally trained or upon which it was built, while the \textit{target} language is the language upon which the system is being used, tested, or adapted. These terms are largely context dependent. Similarly, \textit{sparse} in particular is more often used to refer to a dataset, but can be used of a language when it is under resourced.
 
 While hypothetically some languages could be defined as having no resources, there is no commonly used term such as 'resourceless'. In general, languages without writing systems fit in this category, and while it would potentially be interesting to train resources on audio-only vocabulary, this is generally not done computationally, but intensively by field linguists using specific tools such as dictionary applications or audio/video applications such as Praat \citep{boersma2009praat}, which allows you to view the waveforms for spoken corpora and annotate it. These resources - annotated (or not) corpora made by field linguists for a language - are, along with word lists and basic dictionaries, often the first resources for a given language, and are often not published but are accessibly only through corresponding with the linguist or team doing the work. A comparison with multimillion dollar projects such as Google Translate makes it clear that these languages would be considered under resourced.
 
@@ -71,7 +71,7 @@ Another couple of terms often used in this general context are \textit{incident}
 
 A \textit{computer} or \textit{computational} language is a formalised language used to communicate instructions to a machine. There are a large variety of names and variants, and the definition here may be construed as insufficient. For the purposes of this thesis, a computer language is for talking to a machine, and is demonstrably different than a human or \textit{natural} language, which is generally used for communicating with humans. This definition is important only in so much as it helps clarify that I am talking about human languages when I mean low resource or endangered languages, not computer languages. The relevancy, usage, or status of computer languages is largely irrelevant here, unless it touches on resources used on human languages. For instance, any grammar written in COBOL, a sixty year old language, may be less accessible to open source coders who write primarily in Python or JavaScript, two popular languages used on the web and in the FLOSS ecosystem today. This type of situation will be covered in more depth in Section~\ref{subsec:digital-permanence}.
 
-Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are outside of the scope of this thesis unless they touch on human and low resource languages directly in some tangible way.
+Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are outside of the scope of this thesis unless they touch on LRLs directly in some tangible way.
 
 \subsection{Metrics for language vitality}
 \label{subsec:metrics}
@@ -200,7 +200,7 @@ However, the digital sphere can best be thought of schematically as a new domain
 
 There are several resources which can be used to judge the amount of corpora for a language on the web, outside of papers defining metrics to judge these languages and to state whether they are endangered or thriving. The main resource for low resource languages is almost certainly the Cr\'ubad\'an project, developed by \citet{scannell2007crubadan}.\footnote{\href{http://crubadan.org/}{http://crubadan.org/}. \last{May~2}} This is a massive crawler which looks for documents with trigram frequencies for particular languages by checking against a seed corpus for under-resourced languages developed from Wikipedia, the Jehovah's Witness translations, and translations of the UN Declaration of Human Rights (UNHR). It is often the only corpus for a low resource language on the web, as is the case with Naskapi (see Section~\ref{sec:naskapi}).
 
-Often, a translated Bible is the next best place to look for digital content. Biblical translations are so common as a first resource that there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation, agic2015if}. However, finding the bible or UNHR is often difficult. In these cases, it is best to look for aggregators of data. There are large projects which hold resources for linguists - for more, see Section~\ref{subsec:resource-aggregators}. However, these resources are not always directly reflective of a language's digital presence, but rather of the scope of resources available to computational linguists and natural language processing experts. They satisfy a different need, and tools such as Perseus\footnote{\href{http://www.perseus.tufts.edu/hopper/}{http://www.perseus.tufts.edu/hopper/}. \last{May~2}} might show that there is work done on Latin, but it does not mean that there is a large Latin-speaking community that could be measured. Instead, organic corpora - such as collected from the web by Cr\'ubad\'an - are most likely the best ways of measuring a language's foothold on the web.
+Often, a translated Bible is the next best place to look for digital content. Biblical translations are so common as a first resource that there is a body of research that uses partial or full translations of the Bible for training natural language processing (NLP) systems as a result \citep{chew2006evaluation, agic2015if}. However, finding the bible or UNHR is often difficult. In these cases, it is best to look for aggregators of data. There are large projects which hold resources for linguists - for more, see Section~\ref{subsec:resource-aggregators}. However, these resources are not always directly reflective of a language's digital presence, but rather of the scope of resources available to computational linguists and natural language processing experts. They satisfy a different need, and tools such as Perseus\footnote{\href{http://www.perseus.tufts.edu/hopper/}{http://www.perseus.tufts.edu/hopper/}. \last{May~2}} might show that there is work done on Latin, but it does not mean that there is a large Latin-speaking community that could be measured. Instead, organic corpora - such as collected from the web by Cr\'ubad\'an - are most likely the best ways of measuring a language's foothold on the web.
 
 \subsubsection{Metrics for digital presence}
 
