--- a/open-source-for-lrls.tex
+++ b/open-source-for-lrls.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 \section{Open Source Code for Low Resource Languages}
-\label{sec:endlangcode}
+\label{sec:lrl-code}
 
 Now that low resource languages (LRLs) have been described, and now that there has been a brief overview of open source as a software methodology, the reader will doubtless wonder - what is the state of open source code that can be used today by language communities?
 
