--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,91 @@
   note={Last accessed April~24, 2018.}
 }
 
+@article{google2016google,
+title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
+author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
+year  = {2016},
+URL = {http://arxiv.org/abs/1609.08144},
+journal = {CoRR},
+volume  = {abs/1609.08144}
+}
+
+@inproceedings{stolcke2002srilm,
+  title={SRILM-an extensible language modeling toolkit},
+  author={Stolcke, Andreas},
+  booktitle={Seventh international conference on spoken language processing},
+  year={2002}
+}
+
+@phdthesis{adams2017automatic,
+  title={Automatic understanding of unwritten languages},
+  author={Adams, Oliver},
+  year={2017}
+}
+
+
+@article{dingemanse2008review,
+  title={Review of Phonology Assistant 3.0. 1},
+  author={Dingemanse, Mark},
+  year={2008},
+  publisher={University of Hawai'i Press}
+}
+
+
+
+@article{garofalo1993darpa,
+  title={The DARPA TIMIT acoustic-phonetic continuous speech corpus cdrom},
+  author={Garofalo, John S and Lamel, Lori F and Fisher, William M and Fiscus, Johnathan G and Pallett, David S and Dahlgren, Nancy L},
+  journal={Linguistic Data Consortium},
+  year={1993}
+}
+
+
+@inproceedings{kempton2009finding,
+  title={Finding allophones: An evaluation on consonants in the TIMIT corpus},
+  author={Kempton, Timothy and Moore, Roger K},
+  booktitle={Tenth Annual Conference of the International Speech Communication Association},
+  year={2009}
+}
+
+
+@inproceedings{fraga2015improving,
+  title={Improving data selection for low-resource STT and KWS},
+  author={Fraga-Silva, Thiago and Laurent, Antoine and Gauvain, Jean-Luc and Lamel, Lori and Le, Viet-Bac and Messaoudi, Abdel},
+  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2015 IEEE Workshop on},
+  pages={153--159},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{muller2017improving,
+  title={Improving phoneme set discovery for documenting unwritten languages},
+  author={M{\"u}ller, Markus and Franke, J{\"o}rg and St{\"u}ker, Sebastian and Waibel, Alex},
+  journal={Elektronische Sprachsignalverarbeitung (ESSV)},
+  volume={2017},
+  year={2017}
+}
+
+
+@inproceedings{fraga2015active,
+  title={Active Learning based data selection for limited resource STT and KWS},
+  author={Fraga-Silva, Thiago and Gauvain, Jean-Luc and Lamel, Lori and Laurent, Antoine and Le, Viet-Bac and Messaoudi, Abdel},
+  booktitle={Sixteenth Annual Conference of the International Speech Communication Association},
+  year={2015}
+}
+
+
+@article{kempton2014discovering,
+  title={Discovering the phoneme inventory of an unwritten language: A machine-assisted approach},
+  author={Kempton, Timothy and Moore, Roger K},
+  journal={Speech Communication},
+  volume={56},
+  pages={152--166},
+  year={2014},
+  publisher={Elsevier}
+}
+
+
 @article{richards2004syntax,
   title={The syntax of the conjunct and independent orders in {Wampanoag}},
   author={Richards, Norvin W},
@@ -17,6 +102,18 @@
   year={2004},
   publisher={The University of Chicago Press}
 }
+
+@article{schaller1997moore,
+  title={Moore's law: past, present and future},
+  author={Schaller, Robert R},
+  journal={IEEE spectrum},
+  volume={34},
+  number={6},
+  pages={52--59},
+  year={1997},
+  publisher={IEEE}
+}
+
 
 @InProceedings{LittEdulearn,
   author    = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
@@ -1011,6 +1108,17 @@ publisher={Blackwell}
  author={Johnson, D},
  year={2013},
  publisher={Springer}
+}
+
+@article{swadesh1955towards,
+  title={Towards greater accuracy in lexicostatistic dating},
+  author={Swadesh, Morris},
+  journal={International journal of American linguistics},
+  volume={21},
+  number={2},
+  pages={121--137},
+  year={1955},
+  publisher={Indiana University}
 }
 
 @inproceedings{lewis2010haitian,
