Add more Naskapi ideas that are outside of the scope of this thesis

--- a/future-work.tex
+++ b/future-work.tex
@@ -27,7 +27,7 @@ One suggestion would be to also invent a cryptocurrency to incentivise storage o
 
 \subsection{Extending Gaelic and Naskapi resources}
 
-The research here has highlighted many areas of research which could be opened on Gaelic and Naskapi. For instance, an {\it n}-gram MT system for Gaelic may be feasible given the amount of bilingual data. For Naskapi, there is work to be done implementing UIs for syllabics that could be used in Facebook, Snapchat, Instagram, and other venues where there are lots of speakers using language technology. More work here is needed.
+The research here has highlighted many areas of research which could be opened on Gaelic and Naskapi. For instance, an \textit{n}-gram MT system for Gaelic may be feasible given the amount of bilingual data. For Naskapi, there is work to be done implementing UIs for syllabics that could be used in Facebook, Snapchat, Instagram, and other venues where there are lots of speakers using language technology. If nothing else, it would be interesting to run a quantitative study examining how much Naskapi is currently being used on social media by the Naskapi community, or to ask the Band Office for as many bilingual texts as they have to develop a semi-supervised MT system. More work here is needed.
 
 %
 %\subsection{Beyond Ethnologue}
