Small edits cleaning up some todos

--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -100,7 +100,7 @@ In their publication from that conference, \citet{brenzinger2003language} lay ou
 
 For each of these, they further break rating down into categories. For instance, when regarding intergenerational language transmission, they specify six different possible ratings - safe, unsafe, definitively endangered, severely endangered, critically endangered, and extinct - and equate each rating with a score from 5 to 0. Here one of the primary issues with the UNESCO rating can be seen  (as pointed out by \citet{lewis2010assessing}) - namely, that 'safe' is an incredibly large category that needs more fine-grained categories, as it would account for any GIDS-rated language above Level 6.
 
-The three other factors they consider are: governmental and institutional language attitudes and policies including official status and use; community members' attitudes toward their own language; and the amount and quality of documentation. Each of these is also rated on a null to five scale. For documentation, only a superlative rating of five would be considered to be more than low-resourced, as a four rating would be given to a language where "There are one good grammar and a number of adequate grammars, dictionaries, texts, literature, and occasionally updated everyday media; adequate annotated high-quality audio and video recordings." Although useful for linguists wishing to work in the language, this may not be enough for useful analysis and use by computational linguists. %TODO Should there be a section about linguists vs computational resources?
+The three other factors they consider are: governmental and institutional language attitudes and policies including official status and use; community members' attitudes toward their own language; and the amount and quality of documentation. Each of these is also rated on a null to five scale. For documentation, only a superlative rating of five would be considered to be more than low-resourced, as a four rating would be given to a language where "There are one good grammar and a number of adequate grammars, dictionaries, texts, literature, and occasionally updated everyday media; adequate annotated high-quality audio and video recordings." Although useful for linguists wishing to work in the language, this may not be enough for useful analysis and use by computational linguists. For more on this, see Section~\ref{subsec:who-makes-resources}.
 
 In Figure~\ref{fig:unesco}, an example rating using this system, from the appendix of \citet{brenzinger2003language} itself, is included to get some grasp of how these grades work in parallel.
 
@@ -182,13 +182,9 @@ This thesis cannot hope to resolve these issues, nor is it meant to be an overvi
 
 Some things can be done, however. Terminologically, 'low-resource' is intentionally somewhat neutral, as compared to 'minority', 'endangered', or other terms that reflect Western viewpoints. Similarly, using the term {\it language vitality} as opposed to {\it language endangerment} "represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}." These terms will be used for the rest of this paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified (as in Section~\ref{sec:case-studies}).
 
-% TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
-
-% Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
-
-
 \subsection{Digital presence}
 
+% TODO Find reference to Wikipedia being less than ideal
 % I will describe his assessment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
 
 Digital presence, briefly alluded to previously, can be thought of as the amount of language data available through digital sources. A looser definition could be 'the amount of written text on the web', but this would miss out on several important considerations. First, linguistic data does not have to be written to be digitally encoded; videos and audio data are both examples of digital content which is often digitally encoded. In some cases, pictures are also relevant, especially for signed languages or for examples of written text, such as in the millions of scans of papyrus from the Egyptian city of Oxyrhynchus, which are being translated using a crowd-sourced system by thousands of volunteers \citep{williams2014computational}, or for other language mediums, such as the khipu knot system used by the pre-Columbian Incan civilisation \citep{quilter2002narrative}. Secondly, the web (hereafter meant to refer to the World Wide Web) is not the only corpus of knowledge, nor is it the only network through which data can be accessed. Trivial example of other corpuses would be local files collected by individual field researchers that are backed up on hard drives; a similar example of another network would be a local area network in offline areas, or a university intranet.
@@ -258,7 +254,6 @@ advanced & 6 & Main operating systems and application software localised in the 
 Each of these metrics suffers from growing pains. For instance, there is no metric as of yet which ranks English in its own category - something which was seen as a large enough issue to cause the EGIDS authors to add another null ranking for supranational languages. %(TODO: Write a paper on this)
 As well, there has not been an integrated approach looking at quantitative and qualitative measurements together. The most substantial work on this has been Kornai's team, which has worked with funding from SIL International on a Digital Language Vitality database.\footnote{\href{https://hlt.bme.hu/en/projects/lingvit}{https://hlt.bme.hu/en/projects/lingvit}. \last{May~2}} However, the future for this work as, at this moment, unclear (Kornai in personal communications, 2018).
 
-% There's no higher scale - what separates English from French?
-% What about coding _in_ a language? How many languages have native computer languages?
-
+% TODO What about coding _in_ a language? How many languages have native computer languages?
+% TODO Include a subsection, somewhere, on how you can't reasonably expect every single user to learn English to code and to view it as a healthy ecosystem.
 
