--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -2,21 +2,21 @@
 \section{Low Resource Languages}
 \label{sec:endlang}
 
-In this section, I will outline the state of low resource languages (LRLs). First I will define contrasting and distinct terms which are often used to describe these languages. Then, I will talk about language demographics and metrics used to categorise languages as having low resources, before moving on to discuss digital presence as a term for understanding language vitality. Finally, I will mention the various different groups who work on and fund low resource development, and consider how they impact a language's development.
+In this section, I will outline the state of low resource languages (LRLs). First I will define contrasting and distinct terms which are often used to describe these languages. Then, I will talk about metrics used to judge a language's vitality, before moving on to discuss digital presence. Finally, I will mention the various different groups who work on and fund low resource development, and consider how they may impact a language's development.
 
 % Note: I removed linguistic diversity as a central concern
 
 \subsection{Definitions}
 
-Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low} and \emph{under-resourced}, and other terms like \emph{threatened} mean when they refer to a language. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied.
+Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low} and \emph{under-resourced}, and other terms like \emph{threatened} mean when they refer to a language. Each has slightly different meanings in different contexts, and according to the scale and metric applied.
 
 In this section, I will generally define these terms: \textit{endangered}, \textit{moribund}, \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and \textit{constructed} languages; \textit{minority}, \textit{low-resource}, \textit{under-resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This will help inform why I have chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
 
-All of these terms are controversial, and work within larger frameworks and ontologies. I will cover some of these frameworks in Section~\ref{subsec:metrics} on metrics after giving this general overview of definitions.
+All of these terms could be controversial in certain contexts, and work within larger frameworks and ontologies. I will cover some of these frameworks in Section~\ref{subsec:metrics} on metrics after giving this general overview of definitions.
 
 \subsubsection{Endangered, revitalised, and extinct languages}
 
-\emph{Endangered} languages are human languages that are in danger of extinction. The term is borrowed from the scientific literature describing biological species; just as there exists as very real possibility that one day there will be no more Australasian Bittern specimens in the wilds of Australia, it is also possible that one day there may be no spoken examples of Guugu Yimithirr by first language speakers. The term is not completely analogous; we can still read Tocharian texts, but Tocharian is not considered to be a living language, but \textit{extinct}, as there are no speakers who use it regularly (and who are not scholars of obscure languages).
+\emph{Endangered} languages are human languages that are in danger of extinction. The term is borrowed from the scientific literature describing biological species; just as there exists as very real possibility that one day there will be no more Australasian Bittern specimens in the wilds of Australia, it is also possible that one day there may be no speakers of Guugu Yimithirr, either. The term is not completely analogous; we can still read Tocharian texts, but Tocharian is not considered to be a living language, but \textit{extinct}, as there are no speakers who use it regularly (and who are not scholars of obscure dead languages).
 
 {\it Endangered} languages are normally languages which have a high amount of speakers, and crucially are still teaching children the language. Children ensure that the language will live on to the next generation, and when this chain breaks, it is almost impossible to resurrect a language. A language would be endangered when it can be assumed that children will stop learning the language in the next hundred years (according to \citet{krauss92}). This can be difficult to judge, as the rate of deterioration can be high. For instance, Breton had over a million speakers in 1950, but today the numbers may be as low as 200,000. Its future is uncertain.
 
@@ -54,7 +54,7 @@ An example given by \citet{hanks2017policy} is the case of boarding schools in t
 
 Within a state, the proportion of population of speakers compared to the entire population generally determines wether a language is considered a \textit{majority} or a \textit{minority} language. Not all minority languages are endangered languages; for instance, Catalan, spoken by around nine million people in Catalonia and southern France, is not endangered, although it is a minority language and is not an official language of any country. There are arguments that it is the majority language for a stateless state. The same could be said of Tibetan, which is officially the minority language in a region of China, but is considered the be the majority language of the region of Tibet itself, which many view as its own state currently under illegal occupation (as with Hebrew and Israel, further political discussion is beyond the scope of this thesis.)
 
-Some minority languages have legal status as minority languages. A good example would be in Canada, where minority languages in each province are given legal protection - for instance, English in Qu\'ebec, where a majority of the speakers are Francophone, or French in Ontario, where the majority of the speakers are French. Sometimes languages with very small populations - such as indigenous languages spoken by First Nations communities in Canada - are given legal status, too, as is the case with Nunavut, a territory in Canada where two Inuit languages - Inuktitut and Inuinnaqtun - are granted legal status, although they are nationally minority languages, and although one of them, Inuinnaqtun, has less than 300 speakers and comprises only around 1\% of the population of Nunavut. Another example would be Hawai'ian, which is the state language of Hawai'i since 1978, although it only has around 2000 native speakers, and is a minority language in Hawai'i.
+Some minority languages have legal status as minority languages. A good example would be in Canada, where minority languages in each province are given legal protection - for instance, English in Qu\'ebec, where a majority of the speakers are Francophone, or French in Ontario, where the majority of the speakers are French. Sometimes languages with very small populations - such as indigenous languages spoken by First Nations communities in Canada - are given legal status, too, as is the case with Nunavut, a territory in Canada where two Inuit languages - Inuktitut and Inuinnaqtun - are granted legal status, although they are nationally minority languages, and although one of them, Inuinnaqtun, has less than 300 speakers and comprises only around 1\% of the population of Nunavut. Another example would be Hawai'ian, which is the state language of Hawai'i since 1978, although it only has around 2000 native speakers, and is a minority language in Hawai'i. % TODO Cite
 
 
 \subsubsection{Low resource, under resourced and incident languages}
@@ -117,7 +117,7 @@ The UNESCO ratings for languages are listed in the \textit{UNESCO Atlas of the W
 
 \subsubsection{The Extended GIDS (EGIDS)}
 
-Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}. \last{May~2}}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and do not account for directionality on the part of a language community up or down the strata. Second, there are language types which are not included - for instance, there is not a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this is not accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
+\citet{lewis2009ethnologue} in \textit{Ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}. \last{May~2}} pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and do not account for directionality on the part of a language community up or down the strata. Second, there are language types which are not included - for instance, there is not a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this is not accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
 
 EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website.\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}. \last{May~2}} The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
 
