--- a/discussion.tex
+++ b/discussion.tex
@@ -2,6 +2,12 @@
 \section{Discussion}
 \label{sec:discussion}
 
+\subsection{Is digital language development necessary?}
+
+% Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
+
+\subsection{Open Source as a tool for saving languages}
+
 So: how can the open source methodology for software development low resource languages?
 
 The most blatant advantage of open source is that any code developed is in the public domain; anyone can access and use it. This frees up communities to work on their own code, and leads to language developers being able to improve their languages' tech without searching for large amounts of funding, or depending on collaboration with universities or enterprises which may have different incentives and timelines. By contributing to the digital commons, it is possible to raise the quality of code for everyone, and a rising tide lifts all boats.
